[gd_scene load_steps=9 format=3 uid="uid://bfe12plxxaikc"]

[ext_resource type="Script" uid="uid://dp71v1n2ewr2m" path="res://scripts/game_scene.gd" id="1_ycayy"]
[ext_resource type="PackedScene" uid="uid://4gwbm386kfg2" path="res://scenes/Player.tscn" id="2_bw6k5"]
[ext_resource type="Texture2D" uid="uid://msquiqgs4l0o" path="res://assets/background.png" id="2_rurhu"]
[ext_resource type="PackedScene" uid="uid://cw1cevttxifhr" path="res://scenes/user_interface.tscn" id="2_y3j0m"]
[ext_resource type="Shader" uid="uid://p4102l0ls83o" path="res://scripts/water.gdshader" id="3_y3j0m"]
[ext_resource type="AudioStream" uid="uid://bjsqh0wrk5tcf" path="res://assets/coin-flip-88793.mp3" id="5_y3j0m"]
[ext_resource type="AudioStream" uid="uid://bohkhm3m17gn" path="res://assets/ambiance.mp3" id="7_kk2rg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mixcd"]
shader = ExtResource("3_y3j0m")
shader_parameter/wave_color = Vector3(0, 0.8, 1)
shader_parameter/wave_speed = 1.0
shader_parameter/wave_amplitude = 2.0
shader_parameter/wave_frequency = 33.0

[node name="game_scene" type="Node2D"]
script = ExtResource("1_ycayy")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(1, 0.00784314, 0, 1)
position = Vector2(576, 67.5)
scale = Vector2(3.31034, 0.668317)
texture = ExtResource("2_rurhu")

[node name="background" type="ColorRect" parent="."]
offset_top = 135.0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.392157, 0.423529, 0.423529, 0.784314)

[node name="Player" parent="." instance=ExtResource("2_bw6k5")]
position = Vector2(207, 110)

[node name="soul_group_node" type="Node2D" parent="."]

[node name="water" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_mixcd")
offset_top = 135.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="water_ovelay" type="ColorRect" parent="."]
offset_top = 135.0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.105882)

[node name="user_interface" parent="." instance=ExtResource("2_y3j0m")]

[node name="frenzy_timestop" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="frenzy_balanceCD" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_y3j0m")

[node name="ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_kk2rg")
autoplay = true
parameters/looping = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="sense_souls" from="user_interface" to="." method="_on_user_interface_sense_souls"]
[connection signal="timeout" from="frenzy_timestop" to="." method="_on_frenzy_timestop_timeout"]
[connection signal="timeout" from="frenzy_balanceCD" to="." method="_on_frenzy_balance_cd_timeout"]
